# Otic-Fortress

./: README.md
BACKEND/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
BACKEND/docs/: events-backend-implementation.md
BACKEND/infrastructure/azure/: README.md  values.azure-dev.yaml  values.azure-prod.yaml
BACKEND/schemas/api/: README.md  activity-api.openapi.yaml  control-api.openapi.yaml  dashboard-bff.openapi.yaml  ingestion-api.openapi.yaml
BACKEND/schemas/database/: README.md  activity-records.schema.md  audit-custody.schema.md  governance.schema.md  jobs.schema.md  ownership.md  policy.schema.md  registry.schema.md
BACKEND/schemas/events/: activity_record_created.v1.json  audit_event.v1.json  dead_letter_event.v1.json  event_envelope.v1.json  finding_created.v1.json  governance_decision.v1.json  model_invocation.v1.json  replay_manifest.v1.json  tool_invocation.v1.json
BACKEND/services/activity-api/: Dockerfile  README.md  pyproject.toml
BACKEND/services/activity-pipeline-worker/: Dockerfile  README.md  pyproject.toml
BACKEND/services/audit-custody/: Dockerfile  README.md  pyproject.toml
BACKEND/services/control-api/: Dockerfile  README.md  pyproject.toml
BACKEND/services/dashboard-bff/: Dockerfile  README.md  pyproject.toml
BACKEND/services/delivery-worker/: Dockerfile  README.md  pyproject.toml
BACKEND/services/governance-worker/: Dockerfile  README.md  pyproject.toml
BACKEND/services/ingestion-api/: Dockerfile  README.md  pyproject.toml
BACKEND/services/intelligence-worker/: Dockerfile  README.md  pyproject.toml
BACKEND/services/reporting-worker/: Dockerfile  README.md  (+1 more)
BACKEND/src/: server.js
(+222 files in other folders)
